// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`MdaaInstallerStack Snapshots BuildSpec snapshot: buildspec.json 1`] = `
"{
  "version": 0.2,
  "phases": {
    "install": {
      "runtime-versions": {
        "nodejs": 22
      },
      "commands": [
        "git clone --branch $REPOSITORY_BRANCH_NAME --single-branch https://github.com/aws/modern-data-architecture-accelerator.git"
      ]
    },
    "build": {
      "commands": [
        "set -e",
        "cd modern-data-architecture-accelerator",
        "npm install -g aws-cdk @aws-mdaa/cli@\${MDAA_VERSION}",
        "echo \\"Starting build phase...\\"",
        "export CDK_DEFAULT_REGION=$(aws ec2 describe-availability-zones --output text --query 'AvailabilityZones[0].RegionName')",
        "export CDK_DEFAULT_ACCOUNT=$(aws sts get-caller-identity --query 'Account' --output text)",
        "export CDK_NEW_BOOTSTRAP=1 && aws cloudformation describe-stacks --stack-name CDKToolkit || npx cdk bootstrap aws://\${CDK_DEFAULT_ACCOUNT}/\${CDK_DEFAULT_REGION}",
        "echo \\"org: \${ORG_NAME}\\"",
        "echo \\"Replacing org-name place holder\\"",
        "echo using sample: \${SAMPLE_CONFIG_FOLDER}/\${SAMPLE_NAME}/mdaa.yaml",
        "sed -i 's/<unique[- ]org[- ]name>/'\\"$ORG_NAME\\"'/g' \${SAMPLE_CONFIG_FOLDER}/\${SAMPLE_NAME}/mdaa.yaml",
        "find \${SAMPLE_CONFIG_FOLDER}/\${SAMPLE_NAME}/ -type f \\\\( -name \\"*.yaml\\" -o -name \\"*.yml\\" \\\\) -exec sed -i 's/<your vpc id>/'\\"$VPC_ID\\"'/g' {} \\\\;",
        "find \${SAMPLE_CONFIG_FOLDER}/\${SAMPLE_NAME}/ -type f \\\\( -name \\"*.yaml\\" -o -name \\"*.yml\\" \\\\) -exec sed -i 's/<your subnet id>/'\\"$SUBNET_ID\\"'/g' {} \\\\;",
        "find \${SAMPLE_CONFIG_FOLDER}/\${SAMPLE_NAME}/ -type f \\\\( -name \\"*.yaml\\" -o -name \\"*.yml\\" \\\\) -exec sed -i 's/<your datascience team name>/'\\"$ORG_NAME\\"'-datascience-team/g' {} \\\\;",
        "sed -i 's/^region: default$/region: '\\"$CDK_DEFAULT_REGION\\"'/' \${SAMPLE_CONFIG_FOLDER}/\${SAMPLE_NAME}/mdaa.yaml",
        "mdaa -c \${SAMPLE_CONFIG_FOLDER}/\${SAMPLE_NAME}/mdaa.yaml --mdaa_version \${MDAA_VERSION} deploy",
        "echo \\"Deployment completed successfully\\""
      ]
    }
  }
}"
`;

exports[`MdaaInstallerStack Snapshots CodeBuild resources snapshot: codebuild-resources.json 1`] = `
{
  "GitHubBuildProject4A7606D3": {
    "Properties": {
      "Artifacts": {
        "Type": "NO_ARTIFACTS",
      },
      "Cache": {
        "Type": "NO_CACHE",
      },
      "EncryptionKey": {
        "Fn::GetAtt": [
          "InstallerKey2A6A8C6D",
          "Arn",
        ],
      },
      "Environment": {
        "ComputeType": "BUILD_GENERAL1_SMALL",
        "EnvironmentVariables": [
          {
            "Name": "REPOSITORY_BRANCH_NAME",
            "Type": "PLAINTEXT",
            "Value": {
              "Ref": "RepositoryBranchName",
            },
          },
          {
            "Name": "SAMPLE_NAME",
            "Type": "PLAINTEXT",
            "Value": {
              "Ref": "SampleName",
            },
          },
          {
            "Name": "SAMPLE_CONFIG_FOLDER",
            "Type": "PLAINTEXT",
            "Value": "starter_kits",
          },
          {
            "Name": "ORG_NAME",
            "Type": "PLAINTEXT",
            "Value": {
              "Ref": "OrgName",
            },
          },
          {
            "Name": "VPC_ID",
            "Type": "PLAINTEXT",
            "Value": {
              "Ref": "VpcId",
            },
          },
          {
            "Name": "SUBNET_ID",
            "Type": "PLAINTEXT",
            "Value": {
              "Ref": "SubnetId",
            },
          },
          {
            "Name": "MDAA_VERSION",
            "Type": "PLAINTEXT",
            "Value": {
              "Ref": "MdaaVersion",
            },
          },
        ],
        "Image": "aws/codebuild/standard:7.0",
        "ImagePullCredentialsType": "CODEBUILD",
        "PrivilegedMode": true,
        "Type": "LINUX_CONTAINER",
      },
      "Name": {
        "Fn::Join": [
          "",
          [
            "MDAA-Build-",
            {
              "Ref": "SampleName",
            },
          ],
        ],
      },
      "ServiceRole": {
        "Fn::GetAtt": [
          "BuildRole41B77417",
          "Arn",
        ],
      },
      "Source": {
        "BuildSpec": "{
  "version": 0.2,
  "phases": {
    "install": {
      "runtime-versions": {
        "nodejs": 22
      },
      "commands": [
        "git clone --branch $REPOSITORY_BRANCH_NAME --single-branch https://github.com/aws/modern-data-architecture-accelerator.git"
      ]
    },
    "build": {
      "commands": [
        "set -e",
        "cd modern-data-architecture-accelerator",
        "npm install -g aws-cdk @aws-mdaa/cli@\${MDAA_VERSION}",
        "echo \\"Starting build phase...\\"",
        "export CDK_DEFAULT_REGION=$(aws ec2 describe-availability-zones --output text --query 'AvailabilityZones[0].RegionName')",
        "export CDK_DEFAULT_ACCOUNT=$(aws sts get-caller-identity --query 'Account' --output text)",
        "export CDK_NEW_BOOTSTRAP=1 && aws cloudformation describe-stacks --stack-name CDKToolkit || npx cdk bootstrap aws://\${CDK_DEFAULT_ACCOUNT}/\${CDK_DEFAULT_REGION}",
        "echo \\"org: \${ORG_NAME}\\"",
        "echo \\"Replacing org-name place holder\\"",
        "echo using sample: \${SAMPLE_CONFIG_FOLDER}/\${SAMPLE_NAME}/mdaa.yaml",
        "sed -i 's/<unique[- ]org[- ]name>/'\\"$ORG_NAME\\"'/g' \${SAMPLE_CONFIG_FOLDER}/\${SAMPLE_NAME}/mdaa.yaml",
        "find \${SAMPLE_CONFIG_FOLDER}/\${SAMPLE_NAME}/ -type f \\\\( -name \\"*.yaml\\" -o -name \\"*.yml\\" \\\\) -exec sed -i 's/<your vpc id>/'\\"$VPC_ID\\"'/g' {} \\\\;",
        "find \${SAMPLE_CONFIG_FOLDER}/\${SAMPLE_NAME}/ -type f \\\\( -name \\"*.yaml\\" -o -name \\"*.yml\\" \\\\) -exec sed -i 's/<your subnet id>/'\\"$SUBNET_ID\\"'/g' {} \\\\;",
        "find \${SAMPLE_CONFIG_FOLDER}/\${SAMPLE_NAME}/ -type f \\\\( -name \\"*.yaml\\" -o -name \\"*.yml\\" \\\\) -exec sed -i 's/<your datascience team name>/'\\"$ORG_NAME\\"'-datascience-team/g' {} \\\\;",
        "sed -i 's/^region: default$/region: '\\"$CDK_DEFAULT_REGION\\"'/' \${SAMPLE_CONFIG_FOLDER}/\${SAMPLE_NAME}/mdaa.yaml",
        "mdaa -c \${SAMPLE_CONFIG_FOLDER}/\${SAMPLE_NAME}/mdaa.yaml --mdaa_version \${MDAA_VERSION} deploy",
        "echo \\"Deployment completed successfully\\""
      ]
    }
  }
}",
        "Type": "NO_SOURCE",
      },
    },
    "Type": "AWS::CodeBuild::Project",
  },
}
`;

exports[`MdaaInstallerStack Snapshots Environment variables snapshot: environment-variables.json 1`] = `
[
  {
    "Name": "REPOSITORY_BRANCH_NAME",
    "Type": "PLAINTEXT",
    "Value": {
      "Ref": "RepositoryBranchName",
    },
  },
  {
    "Name": "SAMPLE_NAME",
    "Type": "PLAINTEXT",
    "Value": {
      "Ref": "SampleName",
    },
  },
  {
    "Name": "SAMPLE_CONFIG_FOLDER",
    "Type": "PLAINTEXT",
    "Value": "starter_kits",
  },
  {
    "Name": "ORG_NAME",
    "Type": "PLAINTEXT",
    "Value": {
      "Ref": "OrgName",
    },
  },
  {
    "Name": "VPC_ID",
    "Type": "PLAINTEXT",
    "Value": {
      "Ref": "VpcId",
    },
  },
  {
    "Name": "SUBNET_ID",
    "Type": "PLAINTEXT",
    "Value": {
      "Ref": "SubnetId",
    },
  },
  {
    "Name": "MDAA_VERSION",
    "Type": "PLAINTEXT",
    "Value": {
      "Ref": "MdaaVersion",
    },
  },
]
`;

exports[`MdaaInstallerStack Snapshots Full CloudFormation template snapshot: full-template.json 1`] = `
{
  "Metadata": {
    "AWS::CloudFormation::Interface": {
      "ParameterGroups": [
        {
          "Label": {
            "default": "GitHub Repository Configuration",
          },
          "Parameters": [
            "RepositoryBranchName",
          ],
        },
        {
          "Label": {
            "default": "MDAA Configuration",
          },
          "Parameters": [
            "SampleName",
            "OrgName",
            "MdaaVersion",
          ],
        },
        {
          "Label": {
            "default": "Network Configuration",
          },
          "Parameters": [
            "VpcId",
            "SubnetId",
          ],
        },
      ],
      "ParameterLabels": {
        "MdaaVersion": {
          "default": "MDAA Version",
        },
        "OrgName": {
          "default": "Organization Name (Required)",
        },
        "RepositoryBranchName": {
          "default": "GitHub Branch Name",
        },
        "SampleName": {
          "default": "MDAA Sample Configuration",
        },
        "SubnetId": {
          "default": "Subnet ID",
        },
        "VpcId": {
          "default": "VPC ID",
        },
      },
    },
  },
  "Outputs": {
    "CodeBuildProjectName": {
      "Description": "Name of the CodeBuild project",
      "Value": {
        "Ref": "GitHubBuildProject4A7606D3",
      },
    },
    "CodeBuildProjectUrl": {
      "Description": "Click to open the CodeBuild project. Then click "Start build" to begin the MDAA deployment.",
      "Value": {
        "Fn::Join": [
          "",
          [
            "https://us-east-1.console.aws.amazon.com/codesuite/codebuild/projects/",
            {
              "Ref": "GitHubBuildProject4A7606D3",
            },
            "/build-history?region=us-east-1",
          ],
        ],
      },
    },
  },
  "Parameters": {
    "MdaaVersion": {
      "AllowedPattern": "^(latest|[0-9]+(\\.[0-9]+)*)$",
      "ConstraintDescription": "Must be "latest" or a version with numbers and dots only (e.g., 1.3.0)",
      "Default": "latest",
      "Description": "Version of the MDAA modules to deploy (e.g., "latest", "1.3.0"). This version needs to be compatible with the branch you are selecting",
      "Type": "String",
    },
    "OrgName": {
      "AllowedPattern": "^[a-z][a-z0-9-]{0,99}$",
      "ConstraintDescription": "Org Name must start with a lowercase letter and contain only lowercase alphanumeric characters and hyphens. Maximum length is 100 characters.",
      "Description": "An MDAA deployment requires an Org Name (must start with a lowercase letter, contain only lowercase alphanumeric characters and hyphens, and be 100 characters or less)",
      "Type": "String",
    },
    "RepositoryBranchName": {
      "AllowedPattern": ".+",
      "ConstraintDescription": "Repository Branch Name is required",
      "Default": "release/v1.6.0",
      "Description": "The name of the branch (e.g., "main")",
      "Type": "String",
    },
    "SampleName": {
      "AllowedValues": [
        "basic_datalake",
        "basic_datascience_platform",
      ],
      "Default": "basic_datalake",
      "Description": "MDAA Sample you want to deploy",
      "Type": "String",
    },
    "SubnetId": {
      "Description": "The ID of the subnet to use for deployment. Must be a subnet within the selected VPC. Required for resources that need network access.",
      "Type": "AWS::EC2::Subnet::Id",
    },
    "VpcId": {
      "Description": "The ID of the VPC to use for deployment. Required for resources that need network access.",
      "Type": "AWS::EC2::VPC::Id",
    },
  },
  "Resources": {
    "BuildRole41B77417": {
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": {
                "Service": "codebuild.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "ManagedPolicyArns": [
          {
            "Fn::Join": [
              "",
              [
                "arn:",
                {
                  "Ref": "AWS::Partition",
                },
                ":iam::aws:policy/AdministratorAccess",
              ],
            ],
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
    "BuildRoleDefaultPolicy05D1D9FE": {
      "Properties": {
        "PolicyDocument": {
          "Statement": [
            {
              "Action": [
                "logs:CreateLogGroup",
                "logs:CreateLogStream",
                "logs:PutLogEvents",
              ],
              "Effect": "Allow",
              "Resource": [
                {
                  "Fn::Join": [
                    "",
                    [
                      "arn:",
                      {
                        "Ref": "AWS::Partition",
                      },
                      ":logs:us-east-1:xxxxxx:log-group:/aws/codebuild/",
                      {
                        "Ref": "GitHubBuildProject4A7606D3",
                      },
                    ],
                  ],
                },
                {
                  "Fn::Join": [
                    "",
                    [
                      "arn:",
                      {
                        "Ref": "AWS::Partition",
                      },
                      ":logs:us-east-1:xxxxxx:log-group:/aws/codebuild/",
                      {
                        "Ref": "GitHubBuildProject4A7606D3",
                      },
                      ":*",
                    ],
                  ],
                },
              ],
            },
            {
              "Action": [
                "codebuild:CreateReportGroup",
                "codebuild:CreateReport",
                "codebuild:UpdateReport",
                "codebuild:BatchPutTestCases",
                "codebuild:BatchPutCodeCoverages",
              ],
              "Effect": "Allow",
              "Resource": {
                "Fn::Join": [
                  "",
                  [
                    "arn:",
                    {
                      "Ref": "AWS::Partition",
                    },
                    ":codebuild:us-east-1:xxxxxx:report-group/",
                    {
                      "Ref": "GitHubBuildProject4A7606D3",
                    },
                    "-*",
                  ],
                ],
              },
            },
            {
              "Action": [
                "kms:Decrypt",
                "kms:Encrypt",
                "kms:ReEncrypt*",
                "kms:GenerateDataKey*",
              ],
              "Effect": "Allow",
              "Resource": {
                "Fn::GetAtt": [
                  "InstallerKey2A6A8C6D",
                  "Arn",
                ],
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "BuildRoleDefaultPolicy05D1D9FE",
        "Roles": [
          {
            "Ref": "BuildRole41B77417",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "GitHubBuildProject4A7606D3": {
      "Properties": {
        "Artifacts": {
          "Type": "NO_ARTIFACTS",
        },
        "Cache": {
          "Type": "NO_CACHE",
        },
        "EncryptionKey": {
          "Fn::GetAtt": [
            "InstallerKey2A6A8C6D",
            "Arn",
          ],
        },
        "Environment": {
          "ComputeType": "BUILD_GENERAL1_SMALL",
          "EnvironmentVariables": [
            {
              "Name": "REPOSITORY_BRANCH_NAME",
              "Type": "PLAINTEXT",
              "Value": {
                "Ref": "RepositoryBranchName",
              },
            },
            {
              "Name": "SAMPLE_NAME",
              "Type": "PLAINTEXT",
              "Value": {
                "Ref": "SampleName",
              },
            },
            {
              "Name": "SAMPLE_CONFIG_FOLDER",
              "Type": "PLAINTEXT",
              "Value": "starter_kits",
            },
            {
              "Name": "ORG_NAME",
              "Type": "PLAINTEXT",
              "Value": {
                "Ref": "OrgName",
              },
            },
            {
              "Name": "VPC_ID",
              "Type": "PLAINTEXT",
              "Value": {
                "Ref": "VpcId",
              },
            },
            {
              "Name": "SUBNET_ID",
              "Type": "PLAINTEXT",
              "Value": {
                "Ref": "SubnetId",
              },
            },
            {
              "Name": "MDAA_VERSION",
              "Type": "PLAINTEXT",
              "Value": {
                "Ref": "MdaaVersion",
              },
            },
          ],
          "Image": "aws/codebuild/standard:7.0",
          "ImagePullCredentialsType": "CODEBUILD",
          "PrivilegedMode": true,
          "Type": "LINUX_CONTAINER",
        },
        "Name": {
          "Fn::Join": [
            "",
            [
              "MDAA-Build-",
              {
                "Ref": "SampleName",
              },
            ],
          ],
        },
        "ServiceRole": {
          "Fn::GetAtt": [
            "BuildRole41B77417",
            "Arn",
          ],
        },
        "Source": {
          "BuildSpec": "{
  "version": 0.2,
  "phases": {
    "install": {
      "runtime-versions": {
        "nodejs": 22
      },
      "commands": [
        "git clone --branch $REPOSITORY_BRANCH_NAME --single-branch https://github.com/aws/modern-data-architecture-accelerator.git"
      ]
    },
    "build": {
      "commands": [
        "set -e",
        "cd modern-data-architecture-accelerator",
        "npm install -g aws-cdk @aws-mdaa/cli@\${MDAA_VERSION}",
        "echo \\"Starting build phase...\\"",
        "export CDK_DEFAULT_REGION=$(aws ec2 describe-availability-zones --output text --query 'AvailabilityZones[0].RegionName')",
        "export CDK_DEFAULT_ACCOUNT=$(aws sts get-caller-identity --query 'Account' --output text)",
        "export CDK_NEW_BOOTSTRAP=1 && aws cloudformation describe-stacks --stack-name CDKToolkit || npx cdk bootstrap aws://\${CDK_DEFAULT_ACCOUNT}/\${CDK_DEFAULT_REGION}",
        "echo \\"org: \${ORG_NAME}\\"",
        "echo \\"Replacing org-name place holder\\"",
        "echo using sample: \${SAMPLE_CONFIG_FOLDER}/\${SAMPLE_NAME}/mdaa.yaml",
        "sed -i 's/<unique[- ]org[- ]name>/'\\"$ORG_NAME\\"'/g' \${SAMPLE_CONFIG_FOLDER}/\${SAMPLE_NAME}/mdaa.yaml",
        "find \${SAMPLE_CONFIG_FOLDER}/\${SAMPLE_NAME}/ -type f \\\\( -name \\"*.yaml\\" -o -name \\"*.yml\\" \\\\) -exec sed -i 's/<your vpc id>/'\\"$VPC_ID\\"'/g' {} \\\\;",
        "find \${SAMPLE_CONFIG_FOLDER}/\${SAMPLE_NAME}/ -type f \\\\( -name \\"*.yaml\\" -o -name \\"*.yml\\" \\\\) -exec sed -i 's/<your subnet id>/'\\"$SUBNET_ID\\"'/g' {} \\\\;",
        "find \${SAMPLE_CONFIG_FOLDER}/\${SAMPLE_NAME}/ -type f \\\\( -name \\"*.yaml\\" -o -name \\"*.yml\\" \\\\) -exec sed -i 's/<your datascience team name>/'\\"$ORG_NAME\\"'-datascience-team/g' {} \\\\;",
        "sed -i 's/^region: default$/region: '\\"$CDK_DEFAULT_REGION\\"'/' \${SAMPLE_CONFIG_FOLDER}/\${SAMPLE_NAME}/mdaa.yaml",
        "mdaa -c \${SAMPLE_CONFIG_FOLDER}/\${SAMPLE_NAME}/mdaa.yaml --mdaa_version \${MDAA_VERSION} deploy",
        "echo \\"Deployment completed successfully\\""
      ]
    }
  }
}",
          "Type": "NO_SOURCE",
        },
      },
      "Type": "AWS::CodeBuild::Project",
    },
    "InstallerKey2A6A8C6D": {
      "DeletionPolicy": "Retain",
      "Properties": {
        "Description": "Key used for encryption of CodeBuild artifacts",
        "EnableKeyRotation": true,
        "KeyPolicy": {
          "Statement": [
            {
              "Action": "kms:*",
              "Effect": "Allow",
              "Principal": {
                "AWS": {
                  "Fn::Join": [
                    "",
                    [
                      "arn:",
                      {
                        "Ref": "AWS::Partition",
                      },
                      ":iam::xxxxxx:root",
                    ],
                  ],
                },
              },
              "Resource": "*",
            },
          ],
          "Version": "2012-10-17",
        },
      },
      "Type": "AWS::KMS::Key",
      "UpdateReplacePolicy": "Retain",
    },
  },
  "Rules": {
    "ValidateNetworkParametersForDataScience": {
      "Assertions": [
        {
          "Assert": {
            "Fn::Not": [
              {
                "Fn::Equals": [
                  {
                    "Ref": "VpcId",
                  },
                  "",
                ],
              },
            ],
          },
          "AssertDescription": "VPC ID is required.",
        },
        {
          "Assert": {
            "Fn::Not": [
              {
                "Fn::Equals": [
                  {
                    "Ref": "SubnetId",
                  },
                  "",
                ],
              },
            ],
          },
          "AssertDescription": "Subnet ID is required.",
        },
      ],
      "RuleCondition": {
        "Fn::Equals": [
          {
            "Ref": "SampleName",
          },
          "basic_datascience_platform",
        ],
      },
    },
    "ValidateOrganizationName": {
      "Assertions": [
        {
          "Assert": {
            "Fn::Not": [
              {
                "Fn::Equals": [
                  {
                    "Ref": "OrgName",
                  },
                  "",
                ],
              },
            ],
          },
          "AssertDescription": "Organization Name is required for all MDAA deployments",
        },
      ],
    },
  },
}
`;

exports[`MdaaInstallerStack Snapshots IAM resources snapshot: iam-resources.json 1`] = `
{
  "policies": {
    "BuildRoleDefaultPolicy05D1D9FE": {
      "Properties": {
        "PolicyDocument": {
          "Statement": [
            {
              "Action": [
                "logs:CreateLogGroup",
                "logs:CreateLogStream",
                "logs:PutLogEvents",
              ],
              "Effect": "Allow",
              "Resource": [
                {
                  "Fn::Join": [
                    "",
                    [
                      "arn:",
                      {
                        "Ref": "AWS::Partition",
                      },
                      ":logs:us-east-1:xxxxxx:log-group:/aws/codebuild/",
                      {
                        "Ref": "GitHubBuildProject4A7606D3",
                      },
                    ],
                  ],
                },
                {
                  "Fn::Join": [
                    "",
                    [
                      "arn:",
                      {
                        "Ref": "AWS::Partition",
                      },
                      ":logs:us-east-1:xxxxxx:log-group:/aws/codebuild/",
                      {
                        "Ref": "GitHubBuildProject4A7606D3",
                      },
                      ":*",
                    ],
                  ],
                },
              ],
            },
            {
              "Action": [
                "codebuild:CreateReportGroup",
                "codebuild:CreateReport",
                "codebuild:UpdateReport",
                "codebuild:BatchPutTestCases",
                "codebuild:BatchPutCodeCoverages",
              ],
              "Effect": "Allow",
              "Resource": {
                "Fn::Join": [
                  "",
                  [
                    "arn:",
                    {
                      "Ref": "AWS::Partition",
                    },
                    ":codebuild:us-east-1:xxxxxx:report-group/",
                    {
                      "Ref": "GitHubBuildProject4A7606D3",
                    },
                    "-*",
                  ],
                ],
              },
            },
            {
              "Action": [
                "kms:Decrypt",
                "kms:Encrypt",
                "kms:ReEncrypt*",
                "kms:GenerateDataKey*",
              ],
              "Effect": "Allow",
              "Resource": {
                "Fn::GetAtt": [
                  "InstallerKey2A6A8C6D",
                  "Arn",
                ],
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "BuildRoleDefaultPolicy05D1D9FE",
        "Roles": [
          {
            "Ref": "BuildRole41B77417",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
  },
  "roles": {
    "BuildRole41B77417": {
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": {
                "Service": "codebuild.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "ManagedPolicyArns": [
          {
            "Fn::Join": [
              "",
              [
                "arn:",
                {
                  "Ref": "AWS::Partition",
                },
                ":iam::aws:policy/AdministratorAccess",
              ],
            ],
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
  },
}
`;

exports[`MdaaInstallerStack Snapshots KMS resources snapshot: kms-resources.json 1`] = `
{
  "keys": {
    "InstallerKey2A6A8C6D": {
      "DeletionPolicy": "Retain",
      "Properties": {
        "Description": "Key used for encryption of CodeBuild artifacts",
        "EnableKeyRotation": true,
        "KeyPolicy": {
          "Statement": [
            {
              "Action": "kms:*",
              "Effect": "Allow",
              "Principal": {
                "AWS": {
                  "Fn::Join": [
                    "",
                    [
                      "arn:",
                      {
                        "Ref": "AWS::Partition",
                      },
                      ":iam::xxxxxx:root",
                    ],
                  ],
                },
              },
              "Resource": "*",
            },
          ],
          "Version": "2012-10-17",
        },
      },
      "Type": "AWS::KMS::Key",
      "UpdateReplacePolicy": "Retain",
    },
  },
}
`;

exports[`MdaaInstallerStack Snapshots Metadata section snapshot: metadata.json 1`] = `
{
  "AWS::CloudFormation::Interface": {
    "ParameterGroups": [
      {
        "Label": {
          "default": "GitHub Repository Configuration",
        },
        "Parameters": [
          "RepositoryBranchName",
        ],
      },
      {
        "Label": {
          "default": "MDAA Configuration",
        },
        "Parameters": [
          "SampleName",
          "OrgName",
          "MdaaVersion",
        ],
      },
      {
        "Label": {
          "default": "Network Configuration",
        },
        "Parameters": [
          "VpcId",
          "SubnetId",
        ],
      },
    ],
    "ParameterLabels": {
      "MdaaVersion": {
        "default": "MDAA Version",
      },
      "OrgName": {
        "default": "Organization Name (Required)",
      },
      "RepositoryBranchName": {
        "default": "GitHub Branch Name",
      },
      "SampleName": {
        "default": "MDAA Sample Configuration",
      },
      "SubnetId": {
        "default": "Subnet ID",
      },
      "VpcId": {
        "default": "VPC ID",
      },
    },
  },
}
`;

exports[`MdaaInstallerStack Snapshots Parameter groups and labels snapshot: parameter-interface.json 1`] = `
{
  "parameterGroups": [
    {
      "Label": {
        "default": "GitHub Repository Configuration",
      },
      "Parameters": [
        "RepositoryBranchName",
      ],
    },
    {
      "Label": {
        "default": "MDAA Configuration",
      },
      "Parameters": [
        "SampleName",
        "OrgName",
        "MdaaVersion",
      ],
    },
    {
      "Label": {
        "default": "Network Configuration",
      },
      "Parameters": [
        "VpcId",
        "SubnetId",
      ],
    },
  ],
  "parameterLabels": {
    "MdaaVersion": {
      "default": "MDAA Version",
    },
    "OrgName": {
      "default": "Organization Name (Required)",
    },
    "RepositoryBranchName": {
      "default": "GitHub Branch Name",
    },
    "SampleName": {
      "default": "MDAA Sample Configuration",
    },
    "SubnetId": {
      "default": "Subnet ID",
    },
    "VpcId": {
      "default": "VPC ID",
    },
  },
}
`;

exports[`MdaaInstallerStack Snapshots Parameters section snapshot: parameters.json 1`] = `
{
  "MdaaVersion": {
    "AllowedPattern": "^(latest|[0-9]+(\\.[0-9]+)*)$",
    "ConstraintDescription": "Must be "latest" or a version with numbers and dots only (e.g., 1.3.0)",
    "Default": "latest",
    "Description": "Version of the MDAA modules to deploy (e.g., "latest", "1.3.0"). This version needs to be compatible with the branch you are selecting",
    "Type": "String",
  },
  "OrgName": {
    "AllowedPattern": "^[a-z][a-z0-9-]{0,99}$",
    "ConstraintDescription": "Org Name must start with a lowercase letter and contain only lowercase alphanumeric characters and hyphens. Maximum length is 100 characters.",
    "Description": "An MDAA deployment requires an Org Name (must start with a lowercase letter, contain only lowercase alphanumeric characters and hyphens, and be 100 characters or less)",
    "Type": "String",
  },
  "RepositoryBranchName": {
    "AllowedPattern": ".+",
    "ConstraintDescription": "Repository Branch Name is required",
    "Default": "release/v1.6.0",
    "Description": "The name of the branch (e.g., "main")",
    "Type": "String",
  },
  "SampleName": {
    "AllowedValues": [
      "basic_datalake",
      "basic_datascience_platform",
    ],
    "Default": "basic_datalake",
    "Description": "MDAA Sample you want to deploy",
    "Type": "String",
  },
  "SubnetId": {
    "Description": "The ID of the subnet to use for deployment. Must be a subnet within the selected VPC. Required for resources that need network access.",
    "Type": "AWS::EC2::Subnet::Id",
  },
  "VpcId": {
    "Description": "The ID of the VPC to use for deployment. Required for resources that need network access.",
    "Type": "AWS::EC2::VPC::Id",
  },
}
`;

exports[`MdaaInstallerStack Snapshots Resource dependencies snapshot: resource-dependencies.json 1`] = `{}`;

exports[`MdaaInstallerStack Snapshots Resources section snapshot: resources.json 1`] = `
{
  "BuildRole41B77417": {
    "Properties": {
      "AssumeRolePolicyDocument": {
        "Statement": [
          {
            "Action": "sts:AssumeRole",
            "Effect": "Allow",
            "Principal": {
              "Service": "codebuild.amazonaws.com",
            },
          },
        ],
        "Version": "2012-10-17",
      },
      "ManagedPolicyArns": [
        {
          "Fn::Join": [
            "",
            [
              "arn:",
              {
                "Ref": "AWS::Partition",
              },
              ":iam::aws:policy/AdministratorAccess",
            ],
          ],
        },
      ],
    },
    "Type": "AWS::IAM::Role",
  },
  "BuildRoleDefaultPolicy05D1D9FE": {
    "Properties": {
      "PolicyDocument": {
        "Statement": [
          {
            "Action": [
              "logs:CreateLogGroup",
              "logs:CreateLogStream",
              "logs:PutLogEvents",
            ],
            "Effect": "Allow",
            "Resource": [
              {
                "Fn::Join": [
                  "",
                  [
                    "arn:",
                    {
                      "Ref": "AWS::Partition",
                    },
                    ":logs:us-east-1:xxxxxx:log-group:/aws/codebuild/",
                    {
                      "Ref": "GitHubBuildProject4A7606D3",
                    },
                  ],
                ],
              },
              {
                "Fn::Join": [
                  "",
                  [
                    "arn:",
                    {
                      "Ref": "AWS::Partition",
                    },
                    ":logs:us-east-1:xxxxxx:log-group:/aws/codebuild/",
                    {
                      "Ref": "GitHubBuildProject4A7606D3",
                    },
                    ":*",
                  ],
                ],
              },
            ],
          },
          {
            "Action": [
              "codebuild:CreateReportGroup",
              "codebuild:CreateReport",
              "codebuild:UpdateReport",
              "codebuild:BatchPutTestCases",
              "codebuild:BatchPutCodeCoverages",
            ],
            "Effect": "Allow",
            "Resource": {
              "Fn::Join": [
                "",
                [
                  "arn:",
                  {
                    "Ref": "AWS::Partition",
                  },
                  ":codebuild:us-east-1:xxxxxx:report-group/",
                  {
                    "Ref": "GitHubBuildProject4A7606D3",
                  },
                  "-*",
                ],
              ],
            },
          },
          {
            "Action": [
              "kms:Decrypt",
              "kms:Encrypt",
              "kms:ReEncrypt*",
              "kms:GenerateDataKey*",
            ],
            "Effect": "Allow",
            "Resource": {
              "Fn::GetAtt": [
                "InstallerKey2A6A8C6D",
                "Arn",
              ],
            },
          },
        ],
        "Version": "2012-10-17",
      },
      "PolicyName": "BuildRoleDefaultPolicy05D1D9FE",
      "Roles": [
        {
          "Ref": "BuildRole41B77417",
        },
      ],
    },
    "Type": "AWS::IAM::Policy",
  },
  "GitHubBuildProject4A7606D3": {
    "Properties": {
      "Artifacts": {
        "Type": "NO_ARTIFACTS",
      },
      "Cache": {
        "Type": "NO_CACHE",
      },
      "EncryptionKey": {
        "Fn::GetAtt": [
          "InstallerKey2A6A8C6D",
          "Arn",
        ],
      },
      "Environment": {
        "ComputeType": "BUILD_GENERAL1_SMALL",
        "EnvironmentVariables": [
          {
            "Name": "REPOSITORY_BRANCH_NAME",
            "Type": "PLAINTEXT",
            "Value": {
              "Ref": "RepositoryBranchName",
            },
          },
          {
            "Name": "SAMPLE_NAME",
            "Type": "PLAINTEXT",
            "Value": {
              "Ref": "SampleName",
            },
          },
          {
            "Name": "SAMPLE_CONFIG_FOLDER",
            "Type": "PLAINTEXT",
            "Value": "starter_kits",
          },
          {
            "Name": "ORG_NAME",
            "Type": "PLAINTEXT",
            "Value": {
              "Ref": "OrgName",
            },
          },
          {
            "Name": "VPC_ID",
            "Type": "PLAINTEXT",
            "Value": {
              "Ref": "VpcId",
            },
          },
          {
            "Name": "SUBNET_ID",
            "Type": "PLAINTEXT",
            "Value": {
              "Ref": "SubnetId",
            },
          },
          {
            "Name": "MDAA_VERSION",
            "Type": "PLAINTEXT",
            "Value": {
              "Ref": "MdaaVersion",
            },
          },
        ],
        "Image": "aws/codebuild/standard:7.0",
        "ImagePullCredentialsType": "CODEBUILD",
        "PrivilegedMode": true,
        "Type": "LINUX_CONTAINER",
      },
      "Name": {
        "Fn::Join": [
          "",
          [
            "MDAA-Build-",
            {
              "Ref": "SampleName",
            },
          ],
        ],
      },
      "ServiceRole": {
        "Fn::GetAtt": [
          "BuildRole41B77417",
          "Arn",
        ],
      },
      "Source": {
        "BuildSpec": "{
  "version": 0.2,
  "phases": {
    "install": {
      "runtime-versions": {
        "nodejs": 22
      },
      "commands": [
        "git clone --branch $REPOSITORY_BRANCH_NAME --single-branch https://github.com/aws/modern-data-architecture-accelerator.git"
      ]
    },
    "build": {
      "commands": [
        "set -e",
        "cd modern-data-architecture-accelerator",
        "npm install -g aws-cdk @aws-mdaa/cli@\${MDAA_VERSION}",
        "echo \\"Starting build phase...\\"",
        "export CDK_DEFAULT_REGION=$(aws ec2 describe-availability-zones --output text --query 'AvailabilityZones[0].RegionName')",
        "export CDK_DEFAULT_ACCOUNT=$(aws sts get-caller-identity --query 'Account' --output text)",
        "export CDK_NEW_BOOTSTRAP=1 && aws cloudformation describe-stacks --stack-name CDKToolkit || npx cdk bootstrap aws://\${CDK_DEFAULT_ACCOUNT}/\${CDK_DEFAULT_REGION}",
        "echo \\"org: \${ORG_NAME}\\"",
        "echo \\"Replacing org-name place holder\\"",
        "echo using sample: \${SAMPLE_CONFIG_FOLDER}/\${SAMPLE_NAME}/mdaa.yaml",
        "sed -i 's/<unique[- ]org[- ]name>/'\\"$ORG_NAME\\"'/g' \${SAMPLE_CONFIG_FOLDER}/\${SAMPLE_NAME}/mdaa.yaml",
        "find \${SAMPLE_CONFIG_FOLDER}/\${SAMPLE_NAME}/ -type f \\\\( -name \\"*.yaml\\" -o -name \\"*.yml\\" \\\\) -exec sed -i 's/<your vpc id>/'\\"$VPC_ID\\"'/g' {} \\\\;",
        "find \${SAMPLE_CONFIG_FOLDER}/\${SAMPLE_NAME}/ -type f \\\\( -name \\"*.yaml\\" -o -name \\"*.yml\\" \\\\) -exec sed -i 's/<your subnet id>/'\\"$SUBNET_ID\\"'/g' {} \\\\;",
        "find \${SAMPLE_CONFIG_FOLDER}/\${SAMPLE_NAME}/ -type f \\\\( -name \\"*.yaml\\" -o -name \\"*.yml\\" \\\\) -exec sed -i 's/<your datascience team name>/'\\"$ORG_NAME\\"'-datascience-team/g' {} \\\\;",
        "sed -i 's/^region: default$/region: '\\"$CDK_DEFAULT_REGION\\"'/' \${SAMPLE_CONFIG_FOLDER}/\${SAMPLE_NAME}/mdaa.yaml",
        "mdaa -c \${SAMPLE_CONFIG_FOLDER}/\${SAMPLE_NAME}/mdaa.yaml --mdaa_version \${MDAA_VERSION} deploy",
        "echo \\"Deployment completed successfully\\""
      ]
    }
  }
}",
        "Type": "NO_SOURCE",
      },
    },
    "Type": "AWS::CodeBuild::Project",
  },
  "InstallerKey2A6A8C6D": {
    "DeletionPolicy": "Retain",
    "Properties": {
      "Description": "Key used for encryption of CodeBuild artifacts",
      "EnableKeyRotation": true,
      "KeyPolicy": {
        "Statement": [
          {
            "Action": "kms:*",
            "Effect": "Allow",
            "Principal": {
              "AWS": {
                "Fn::Join": [
                  "",
                  [
                    "arn:",
                    {
                      "Ref": "AWS::Partition",
                    },
                    ":iam::xxxxxx:root",
                  ],
                ],
              },
            },
            "Resource": "*",
          },
        ],
        "Version": "2012-10-17",
      },
    },
    "Type": "AWS::KMS::Key",
    "UpdateReplacePolicy": "Retain",
  },
}
`;

exports[`MdaaInstallerStack Snapshots Rules section snapshot: rules.json 1`] = `
{
  "ValidateNetworkParametersForDataScience": {
    "Assertions": [
      {
        "Assert": {
          "Fn::Not": [
            {
              "Fn::Equals": [
                {
                  "Ref": "VpcId",
                },
                "",
              ],
            },
          ],
        },
        "AssertDescription": "VPC ID is required.",
      },
      {
        "Assert": {
          "Fn::Not": [
            {
              "Fn::Equals": [
                {
                  "Ref": "SubnetId",
                },
                "",
              ],
            },
          ],
        },
        "AssertDescription": "Subnet ID is required.",
      },
    ],
    "RuleCondition": {
      "Fn::Equals": [
        {
          "Ref": "SampleName",
        },
        "basic_datascience_platform",
      ],
    },
  },
  "ValidateOrganizationName": {
    "Assertions": [
      {
        "Assert": {
          "Fn::Not": [
            {
              "Fn::Equals": [
                {
                  "Ref": "OrgName",
                },
                "",
              ],
            },
          ],
        },
        "AssertDescription": "Organization Name is required for all MDAA deployments",
      },
    ],
  },
}
`;

exports[`MdaaInstallerStack Snapshots Security configurations snapshot: security-configurations.json 1`] = `
{
  "kmsKeyRotation": [
    true,
  ],
}
`;

exports[`MdaaInstallerStack with different configurations Stack with custom props snapshot: custom-stack-summary.json 1`] = `
{
  "description": "Custom MDAA Installer Stack for testing",
  "parameters": [
    "RepositoryBranchName",
    "SampleName",
    "OrgName",
    "MdaaVersion",
    "VpcId",
    "SubnetId",
  ],
  "resourceCount": 4,
  "ruleCount": 2,
}
`;
